--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,52 @@
 {
   "name": "flytrainerapp",
   "version": "0.0.0",
+  "main": "main.js",
+  "description": "Flight School Management Software",
+  "author": {
+    "name": "David Gofman",
+    "email": "dgofmancfi@gmail.com"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --proxy-config src/proxy.conf.js",
-    "serve": "ng serve",
+    "start": "ng serve --open --proxy-config src/proxy.conf.js --port 8000",
     "build": "ng build",
+    "build:prod": "npm run build -- -c production",
+    "build:electron": "npm run build -- -c electron",
+    "electron:local": "npm run build:electron && npx electron .",
+    "electron:build": "npm run build:electron && electron-builder build",
+    "electron": "electron .",
     "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.7",
-    "@angular/common": "~9.1.7",
-    "@angular/compiler": "~9.1.7",
-    "@angular/core": "~9.1.7",
-    "@angular/forms": "~9.1.7",
-    "@angular/platform-browser": "~9.1.7",
-    "@angular/platform-browser-dynamic": "~9.1.7",
-    "@angular/router": "~9.1.7",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^10.0.2",
+    "@angular/common": "^10.0.2",
+    "@angular/compiler": "^10.0.2",
+    "@angular/core": "^10.0.2",
+    "@angular/forms": "^10.0.2",
+    "@angular/platform-browser": "^10.0.2",
+    "@angular/platform-browser-dynamic": "^10.0.2",
+    "@angular/router": "^10.0.2",
+    "rxjs": "^6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.10.3",
+    "core-js": "*"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.6",
-    "@angular/cli": "~9.1.6",
-    "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "electron": "^9.0.5",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "@angular/cli": "*",
+    "@angular-devkit/build-angular": "*",
+    "@angular/compiler-cli": "*",
+    "@angular/language-service": "*",
+    "@types/node": "*",
+    "codelyzer": "*",
+    "ts-node": "*",
+    "tslint": "*",
+    "typescript": "*",
+    "electron": "*",
+    "electron-builder": "*"
+  },
+  "resolutions": {
+    "lodash": "^4.17.15"
   }
 }
