--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>filters-helpers_2.13</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.10.3</version>
+		</dependency>
 	</dependencies>
 </project>
