--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,7 +17,8 @@
       "dom"
     ],
     "paths": {
-      "@root/*": ["../*"]
+      "@root/*": ["../*"],
+      "@locales/*": ["../client/src/modules/locales/*"]
     }
   },
   "angularCompilerOptions": {
