--- a/client/angular.json
+++ b/client/angular.json
@@ -24,7 +24,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/modules/data"
             ],
             "styles": [
               "src/styles.less",
