--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>2.8.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe.play</groupId>
+			<artifactId>play-ebean_2.13</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>3.10.3</version>
