--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,2 +1,23 @@
-# This is the main configuration file for the application.
-# https://www.playframework.com/documentation/latest/ConfigFile
+play.db {
+  # Play uses HikariCP as the default connection pool.  You can override settings by changing the prototype:
+  prototype {
+    hikaricp.minimumIdle=50
+    hikaricp.maximumPoolSize=50
+  }
+}
+
+# Connect to database
+db.flytrainer {
+	url="jdbc:mysql://localhost/flytrainer"
+	logSql=true
+}
+
+ebean.flytrainer = ["models.*"]
+
+play.ebean.defaultDatasource=flytrainer
+play.evolutions.enabled=true
+play.evolutions.autoApply=true
+play.evolutions.autoApplyDowns=true
+
+#Optional for debugging
+play.db.pool="utils.HikariConnectionPool"
