create user and account model

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,23 +1,24 @@
 play.db {
   # Play uses HikariCP as the default connection pool.  You can override settings by changing the prototype:
   prototype {
-    hikaricp.minimumIdle=50
-    hikaricp.maximumPoolSize=50
+    hikaricp.minimumIdle = 50
+    hikaricp.maximumPoolSize = 50
   }
 }
 
 # Connect to database
 db.flytrainer {
-	url="jdbc:mysql://localhost/flytrainer"
-	logSql=true
+	url = "jdbc:mysql://localhost/flytrainer"
+	logSql = true
 }
 
 ebean.flytrainer = ["models.*"]
 
-play.ebean.defaultDatasource=flytrainer
-play.evolutions.enabled=true
-play.evolutions.autoApply=true
-play.evolutions.autoApplyDowns=true
+play.ebean.defaultDatasource = flytrainer
+play.evolutions.enabled = true
+play.evolutions.autoApply = true
+play.evolutions.autoApplyDowns = true
 
-#Optional for debugging
-play.db.pool="utils.HikariConnectionPool"
+play.modules.enabled += "models.ServerConfigModule$Bindings"
+play.module.guice = models.ServerConfigModule
+play.db.pool = "models.ServerConfigModule$HikariConnectionPool"
