--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -16,8 +16,8 @@ ebean.flytrainer = ["models.*"]
 
 play.ebean.defaultDatasource = flytrainer
 play.evolutions.enabled = true
-play.evolutions.autoApply = true
-play.evolutions.autoApplyDowns = true
+play.evolutions.autoApply = false
+play.evolutions.autoApplyDowns = false
 
 play.modules.enabled += "models.ServerConfigModule$Bindings"
 play.module.guice = models.ServerConfigModule
