--- a/client/angular.json
+++ b/client/angular.json
@@ -24,11 +24,12 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              "src/assets",
               "src/favicon.ico",
               "src/modules/data"
             ],
             "styles": [
-              "src/styles.less",
+              "src/assets/styles.less",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/nova-colored/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
