--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,9 @@
     "@angular/platform-browser": "^10.0.2",
     "@angular/platform-browser-dynamic": "^10.0.2",
     "@angular/router": "^10.0.2",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "core-js": "*",
     "primeicons": "^3.0.0-rc.1",
     "primeng": "^9.1.3",
