--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "core-js": "*",
-    "primeicons": "^3.0.0-rc.1",
+    "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
