--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -19,6 +19,7 @@ play.evolutions.enabled = true
 play.evolutions.autoApply = false
 play.evolutions.autoApplyDowns = false
 
+play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.modules.enabled += "models.ServerConfigModule$Bindings"
-play.module.guice = models.ServerConfigModule
 play.db.pool = "models.ServerConfigModule$HikariConnectionPool"
+play.module.guice = models.ServerConfigModule
