--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,14 +1,15 @@
 play.db {
   # Play uses HikariCP as the default connection pool.  You can override settings by changing the prototype:
-  prototype {
-    hikaricp.minimumIdle = 50
-    hikaricp.maximumPoolSize = 50
+  prototype.hikaricp {
+    autoCommit = true
+    minimumIdle = 50
+    maximumPoolSize = 50
   }
 }
 
 # Connect to database
 db.flytrainer {
-	url = "jdbc:mysql://localhost/flytrainer"
+	url = "jdbc:mysql://localhost/flytrainer?serverTimezone=America/Los_Angeles"
 	logSql = true
 }
 
