--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "start": "ng serve --open --proxy-config src/proxy.conf.js",
     "build": "ng build",
     "build:prod": "npm run build -- -c production",
+    "cleancss": "grunt purifycss",
     "build:electron": "npm run build -- -c electron --base-href ./index.html",
     "electron:local": "npm run build:electron && npx electron .",
     "electron:build": "npm run build:electron && electron-builder build",
@@ -55,17 +56,20 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "typescript": "^3.9.7",
-    "@angular/cli": "*",
     "@angular-devkit/build-angular": "*",
+    "@angular/cli": "*",
     "@angular/compiler-cli": "*",
     "@angular/language-service": "*",
     "@types/node": "*",
     "codelyzer": "*",
+    "electron": "*",
+    "electron-builder": "*",
+    "glob": "^7.1.6",
+    "grunt": "^1.3.0",
+    "grunt-purifycss": "^0.1.2",
     "ts-node": "*",
     "tslint": "*",
-    "electron": "*",
-    "electron-builder": "*"
+    "typescript": "^3.9.7"
   },
   "resolutions": {
     "lodash": "^4.17.15"
