created certificate view

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -9,7 +9,7 @@ play.db {
 
 # Connect to database
 db.flytrainer {
-	url = "jdbc:mysql://localhost/flytrainer?serverTimezone=America/Los_Angeles"
+	url = "jdbc:mysql://localhost/flytrainer?serverTimezone=UTC"
 	logSql = true
 }
 
