--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "primeng": "^9.1.3",
     "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.8",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
