--- a/client/package.json
+++ b/client/package.json
@@ -36,43 +36,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.3",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "^10.0.2",
-    "@angular/compiler": "^10.0.2",
-    "@angular/core": "^10.0.2",
-    "@angular/forms": "^10.0.2",
-    "@angular/platform-browser": "^10.0.2",
-    "@angular/platform-browser-dynamic": "^10.0.2",
-    "@angular/router": "^10.0.2",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "core-js": "*",
-    "primeicons": "^4.0.0",
+    "@angular/animations": "~11.0.1",
+    "@angular/cdk": "^11.0.1",
+    "@angular/common": "~11.0.1",
+    "@angular/compiler": "~11.0.1",
+    "@angular/core": "~11.0.1",
+    "@angular/forms": "~11.0.1",
+    "@angular/platform-browser": "~11.0.1",
+    "@angular/platform-browser-dynamic": "~11.0.1",
+    "@angular/router": "~11.0.1",
+    "@fortawesome/angular-fontawesome": "^0.8.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "primeicons": "^4.1.0",
     "primeng": "^9.1.3",
-    "rxjs": "^6.6.0",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "xlsx": "^0.16.8",
-    "zone.js": "^0.10.3"
+    "xlsx": "^0.16.9",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "*",
-    "@angular/cli": "*",
-    "@angular/compiler-cli": "*",
-    "@angular/language-service": "*",
-    "@types/node": "*",
-    "codelyzer": "*",
-    "electron": "*",
-    "electron-builder": "*",
+    "@angular-devkit/build-angular": "~0.1100.2",
+    "@angular/cli": "~11.0.2",
+    "@angular/compiler-cli": "~11.0.1",
+    "@types/node": "^14.14.10",
+    "codelyzer": "^6.0.0",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.5",
+    "electron": "^11.0.3",
+    "electron-builder": "^22.9.1",
     "glob": "^7.1.6",
     "grunt": "^1.3.0",
-    "grunt-purifycss": "^0.1.2",
-    "ts-node": "*",
-    "tslint": "*",
-    "typescript": "^3.9.7"
-  },
-  "resolutions": {
-    "lodash": "^4.17.15"
+    "grunt-purifycss": "^0.1.2"
   }
 }
