--- a/client/package.json
+++ b/client/package.json
@@ -36,38 +36,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.1",
-    "@angular/cdk": "^11.0.1",
-    "@angular/common": "~11.0.1",
-    "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
-    "@angular/forms": "~11.0.1",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
-    "@fortawesome/angular-fontawesome": "^0.8.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "primeicons": "^4.1.0",
-    "primeng": "^9.1.3",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "xlsx": "^0.16.9",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "^14.2.11",
+    "@angular/cdk": "^15.0.0",
+    "@angular/forms": "^14.2.11",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^14.2.2",
+    "rxjs": "^7.5.7",
+    "xlsx": "^0.18.5",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
-    "@types/node": "^14.14.10",
-    "codelyzer": "^6.0.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.5",
-    "electron": "^11.0.3",
-    "electron-builder": "^22.9.1",
-    "glob": "^7.1.6",
-    "grunt": "^1.3.0",
-    "grunt-purifycss": "^0.1.2"
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.0.0",
+    "@types/node": "^18.11.9",
+    "codelyzer": "^0.0.28",
+    "electron": "^6.1.12",
+    "electron-builder": "^22.14.13",
+    "grunt": "^1.5.3",
+    "grunt-purifycss": "^0.1.2",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.4"
   }
 }
