--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   one:
-    uses: dgofman/flytrainer/master/.github/workflows/prebuild.yml@master
+    uses: dgofman/flytrainer/.github/workflows/prebuild.yml@master
     name: Job1
     environment: DEV
     runs-on: ubuntu-latest
