--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -7,12 +7,13 @@ on:
     branches: ['master']
 
 jobs:
-  one:
+  wait:
     uses: ./.github/workflows/prebuild.yml
     name: Wait Prebuild
 
-  two:
-    name: Job2
+  tree:
+    needs: one
+    name: Job3
     environment: DEV
     runs-on: ubuntu-latest
     steps:
