--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -35,6 +35,8 @@ jobs:
           fetch-depth: 0
       - name: Create Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
